# sbox

./: .gitignore  Cargo.toml  NOTICE.txt  README.md
.github/workflows/: main.yml
src/: cgroup.rs  clone3.rs  container.rs  lib.rs  manager.rs  mount.rs  mounts.rs  network.rs  process.rs  syscall.rs  tasks.rs  user.rs  userns.rs
tests/: cgroup.rs  common.rs  container.rs  get_rootfs.sh  manager.rs
