[package]
name = "sbox"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tiny linux containers implementation"
repository = "https://github.com/udovin/sbox-rs"
keywords = ["sandbox", "linux"]
categories = ["virtualization"]

[dependencies]
nix = { version = "0.27.1", features = ["signal", "user", "hostname", "fs", "mount"] }
