[package]
name = "sbox"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tiny Linux containers implementation"
repository = "https://github.com/udovin/sbox"
keywords = ["sandbox", "linux"]
categories = ["virtualization"]

[dependencies]
nix = { version = "0.29.0", features = ["signal", "user", "hostname", "fs", "mount", "sched"] }

[dev-dependencies]
rand = "0.8.5"
tar = "0.4.40"
